sfdc_dev/force-app/main/default/objects/BarQR__Barcode_Config__c/fields/BarQR__Allow_Save_to_formats__c.field-meta.xml
<CustomField>
    <fullName>BarQR__Allow_Save_to_formats__c</fullName>
    <label>Allow Save to formats</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>JPEG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>