sfdc_dev/force-app/main/default/objects/BarQR__Barcode_Config__c/fields/BarQR__Barcode_Type__c.field-meta.xml
<CustomField>
    <fullName>BarQR__Barcode_Type__c</fullName>
    <label>Barcode Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BarQR__Barcode_Type</valueSetName>
    </valueSet>
</CustomField>