sfdc_dev/force-app/main/default/objects/BarQR__Barcode_Config__c/fields/BarQR__Font_Rendering__c.field-meta.xml
<CustomField>
    <fullName>BarQR__Font_Rendering__c</fullName>
    <label>Font Rendering</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BarQR__Font_Rendering_Options</valueSetName>
    </valueSet>
</CustomField>